*SVN*

* Added :port and :host handling to UrlRewriter (which unified url_for usage, regardless of whether it's called in view or controller) #7616 [alancfrancis]

* Allow send_file/send_data to use a registered mime type as the :type parameter #7620 [jonathan]

* Allow routing requirements on map.resource(s) #7633 [quixoten]. Example:

  map.resources :network_interfaces, :requirements => { :id => /^\d+\.\d+\.\d+\.\d+$/ }

* Cookie session store: empty and unchanged sessions don't write a cookie.  [Jeremy Kemper]

* Added helper(:all) as a way to include all helpers from app/helpers/**/*.rb in ApplicationController [DHH]

* Integration tests: introduce methods for other HTTP methods.  #6353 [caboose]

* Routing: better support for escaped values in route segments.  #7544 [Chris
Roos]

* Introduce a cookie-based session store as the Rails default. Sessions typically contain at most a user_id and flash message; both fit within the 4K cookie size limit. A secure hash is included with the cookie to ensure data integrity (a user cannot alter his user_id without knowing the secret key included in the hash). If you have more than 4K of session data or don't want your data to be visible to the user, pick another session store. Cookie-based sessions are dramatically faster than the alternatives.  [Jeremy Kemper]

* Added .erb and .builder as preferred aliases to the now deprecated .rhtml and .rxml extensions [Chad Fowler]. This is done to separate the renderer from the mime type. .erb templates are often used to render emails, atom, csv, whatever. So labeling them .rhtml doesn't make too much sense. The same goes for .rxml, which can be used to build everything from HTML to Atom to whatever. .rhtml and .rxml will continue to work until Rails 3.0, though. So this is a slow phasing out. All generators and examples will start using the new aliases, though.

* Added caching option to AssetTagHelper#stylesheet_link_tag and AssetTagHelper#javascript_include_tag [DHH]. Examples:
