@@ -585,7 +585,7 @@ module ActionController #:nodoc:
       end
       
       def session_enabled?
-        request.session_options[:disabled] != false
+        request.session_options && request.session_options[:disabled] != false
       end
       
       # View load paths for controller.
